--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </h1>
     <!-- calculator -->
     <div
-      class="calculator border-4 border-neutral-400 bg-blue-300 max-w-sm h-auto mx-auto py-8 px-4 rounded-2xl lg:max-w-lg"
+      class="calculator border-b-4 border-l-2 border-neutral-400 bg-blue-300 max-w-sm h-auto mx-auto py-8 px-4 shadow-2xl rounded-2xl lg:max-w-lg"
     >
       <div
         class="bg-white text-xl m-5 container mx-auto px-4 shadow-inner max-w-md border-4 border-neutral-400 rounded-2xl py-5 lg:text-2xl"
@@ -28,115 +28,115 @@
       >
         <button
           id="clear"
-          class="drop-shadow-2xl rounded-lg bg-white border-b-2 border-zinc-500 hover:bg-slate-100"
+          class="drop-shadow-2xl rounded-lg bg-white border-b-2 border-l-2 border-zinc-500 hover:bg-slate-100"
         >
           C
         </button>
         <button
           id="delete"
-          class="py-4 px-4 rounded-xl bg-white border-b-2 border-zinc-500 hover:bg-slate-100"
+          class="py-4 px-4 rounded-xl bg-white border-b-2 border-l-2 border-zinc-500 hover:bg-slate-100"
         >
           CE
         </button>
         <button
           id="operator"
-          class="py-4 px-4 rounded-xl bg-white border-b-2 border-zinc-500 hover:bg-slate-100"
+          class="py-4 px-4 rounded-xl bg-white border-b-2 border-l-2 border-zinc-500 hover:bg-slate-100"
         >
           &percnt;
         </button>
         <button
           id="number"
-          class="py-4 px-4 rounded-xl bg-white border-b-2 border-zinc-500 hover:bg-slate-100"
+          class="py-4 px-4 rounded-xl bg-white border-b-2 border-l-2 border-zinc-500 hover:bg-slate-100"
         >
           &divide;
         </button>
         <button
           id="number"
-          class="py-4 px-4 rounded-xl bg-white border-b-2 border-zinc-500 hover:bg-slate-100"
+          class="py-4 px-4 rounded-xl bg-white border-b-2 border-l-2 border-zinc-500 hover:bg-slate-100"
         >
           1
         </button>
         <button
           id="number"
-          class="py-4 px-4 rounded-xl bg-white border-b-2 border-zinc-500 hover:bg-slate-100"
+          class="py-4 px-4 rounded-xl bg-white border-b-2 border-l-2 border-zinc-500 hover:bg-slate-100"
         >
           2
         </button>
         <button
           id="number"
-          class="py-4 px-4 rounded-xl bg-white border-b-2 border-zinc-500 hover:bg-slate-100"
+          class="py-4 px-4 rounded-xl bg-white border-b-2 border-l-2 border-zinc-500 hover:bg-slate-100"
         >
           3
         </button>
         <button
           id="operator"
-          class="py-4 px-4 rounded-xl bg-white border-b-2 border-zinc-500 hover:bg-slate-100"
+          class="py-4 px-4 rounded-xl bg-white border-b-2 border-l-2 border-zinc-500 hover:bg-slate-100"
         >
           &times;
         </button>
         <button
           id="number"
-          class="py-4 px-4 rounded-xl bg-white border-b-2 border-zinc-500 hover:bg-slate-100"
+          class="py-4 px-4 rounded-xl bg-white border-b-2 border-l-2 border-zinc-500 hover:bg-slate-100"
         >
           4
         </button>
         <button
           id="number"
-          class="py-4 px-4 rounded-xl bg-white border-b-2 border-zinc-500 hover:bg-slate-100"
+          class="py-4 px-4 rounded-xl bg-white border-b-2 border-l-2 border-zinc-500 hover:bg-slate-100"
         >
           5
         </button>
         <button
           id="number"
-          class="py-4 px-4 rounded-xl bg-white border-b-2 border-zinc-500 hover:bg-slate-100 transition duration-150 ease-linear"
+          class="py-4 px-4 rounded-xl bg-white border-b-2 border-l-2 border-zinc-500 hover:bg-slate-100 transition duration-150 ease-linear"
         >
           6
         </button>
         <button
           id="operator"
-          class="py-4 px-4 rounded-xl bg-white border-b-2 border-zinc-500 hover:bg-slate-100"
+          class="py-4 px-4 rounded-xl bg-white border-b-2 border-l-2 border-zinc-500 hover:bg-slate-100"
         >
           &minus;
         </button>
         <button
           id="number"
-          class="py-4 px-4 rounded-xl bg-white border-b-2 border-zinc-500 hover:bg-slate-100"
+          class="py-4 px-4 rounded-xl bg-white border-b-2 border-l-2 border-zinc-500 hover:bg-slate-100"
         >
           7
         </button>
         <button
           id="number"
-          class="py-4 px-4 rounded-xl bg-white border-b-2 border-zinc-500 hover:bg-slate-100"
+          class="py-4 px-4 rounded-xl bg-white border-b-2 border-l-2 border-zinc-500 hover:bg-slate-100"
         >
           8
         </button>
         <button
           id="number"
-          class="py-4 px-4 rounded-xl bg-white border-b-2 border-zinc-500 hover:bg-slate-100"
+          class="py-4 px-4 rounded-xl bg-white border-b-2 border-l-2 border-zinc-500 hover:bg-slate-100"
         >
           9
         </button>
         <button
           id="operator"
-          class="py-4 px-4 rounded-xl bg-white border-b-2 border-zinc-500 hover:bg-slate-100"
+          class="py-4 px-4 rounded-xl bg-white border-b-2 border-l-2 border-zinc-500 hover:bg-slate-100"
         >
           &plus;
         </button>
         <button
           id="number"
-          class="py-4 px-4 rounded-xl bg-white border-b-2 border-zinc-500 hover:bg-slate-100"
+          class="py-4 px-4 rounded-xl bg-white border-b-2 border-l-2 border-zinc-500 hover:bg-slate-100"
         >
           0
         </button>
         <button
           id="number"
-          class="py-4 px-4 rounded-xl bg-white border-b-2 border-zinc-500 hover:bg-slate-100"
+          class="py-4 px-4 rounded-xl bg-white border-b-2 border-l-2 border-zinc-500 hover:bg-slate-100"
         >
           .
         </button>
         <button
           id="equals colTwo"
-          class="col-span-2 py-4 px-4 rounded-xl bg-white border-b-2 border-zinc-500 hover:bg-slate-100"
+          class="col-span-2 py-4 px-4 rounded-xl bg-white border-b-2 border-l-2 border-zinc-500 hover:bg-slate-100"
         >
           &equals;
         </button>
