--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </h1>
     <!-- calculator -->
     <div
-      class="calculator border-b-4 border-l-2 border-neutral-400 bg-blue-300 max-w-sm h-auto mx-auto py-8 px-4 shadow-2xl rounded-2xl lg:max-w-lg"
+      class="calculator border-b-4 border-l-2 border-neutral-400 bg-gradient-to-r from-indigo-100 via-purple-200 to-pink-200 max-w-sm h-auto mx-auto py-8 px-4 shadow-2xl rounded-2xl lg:max-w-lg"
     >
       <div
         class="bg-white text-xl m-5 container mx-auto px-4 shadow-inner max-w-md border-4 border-neutral-400 rounded-2xl py-5 lg:text-2xl"
