--- a/index.html
+++ b/index.html
@@ -15,20 +15,20 @@
     </h1>
     <!-- calculator -->
     <div
-      class="calculator border-b-4 border-l-2 border-neutral-400 bg-gradient-to-r from-indigo-100 via-purple-200 to-pink-200 max-w-sm h-auto mx-auto py-8 px-4 shadow-2xl rounded-2xl lg:max-w-lg"
+      class="calculator border-b-4 border-l-2 border-neutral-400 bg-gradient-to-r from-indigo-300 via-purple-200 to-pink-200 max-w-sm h-auto mx-auto py-4 px-4 shadow-2xl rounded-xl lg:max-w-lg"
     >
       <div
-        class="bg-white text-xl m-5 container mx-auto px-4 shadow-inner max-w-md border-4 border-neutral-400 rounded-2xl py-5 lg:text-2xl"
+        class="bg-white text-xl mt-5 container mx-auto px-4 shadow-inner max-w-md border-4 border-neutral-400 rounded-2xl py-4 lg:text-2xl"
       >
         <div class="currentDisplay">0</div>
       </div>
       <div
         id="calnumbers-btn"
-        class="container mx-auto text-center grid grid-cols-4 max-w-md gap-4 text-2xl text-zinc-700 py-6 my-4 lg:text-4xl font-semibold"
+        class="container mx-auto text-center grid grid-cols-4 max-w-md gap-3 text-2xl text-zinc-700 py-3 my-1 lg:text-4xl font-semibold"
       >
         <button
           id="clear"
-          class="drop-shadow-2xl rounded-lg bg-white border-b-2 border-l-2 border-zinc-500 hover:bg-slate-100"
+          class="rounded-lg bg-white border-b-2 border-l-2 border-zinc-500 hover:bg-slate-100"
         >
           C
         </button>
@@ -36,7 +36,7 @@
           id="delete"
           class="py-4 px-4 rounded-xl bg-white border-b-2 border-l-2 border-zinc-500 hover:bg-slate-100"
         >
-          CE
+          DEL
         </button>
         <button
           id="operator"
