--- a/index.html
+++ b/index.html
@@ -7,15 +7,10 @@
     <link rel="stylesheet" href="dist/style.css" />
     <title>calculator</title>
   </head>
-  <body class="bg-white">
-    <h1
-      class="text-3xl container mx-auto text-center mt-5 py-5 capitalize font-serif"
-    >
-      calculator
-    </h1>
+  <body class="bg-pink-50">
     <!-- calculator -->
     <div
-      class="calculator border-b-4 border-l-2 border-neutral-400 bg-gradient-to-r from-indigo-300 via-purple-200 to-pink-200 max-w-sm h-auto mx-auto py-4 px-4 shadow-2xl rounded-xl lg:max-w-lg"
+      class="calculator border-b-4 border-l-2 mt-5 border-neutral-400 bg-gradient-to-r from-indigo-300 via-purple-200 to-pink-200 max-w-sm h-auto mx-auto py-4 px-4 shadow-2xl rounded-xl lg:max-w-lg"
     >
       <div
         class="bg-white text-xl mt-5 container mx-auto px-4 shadow-inner max-w-md border-4 border-neutral-400 rounded-2xl py-4 lg:text-2xl"
@@ -45,7 +40,7 @@
           &percnt;
         </button>
         <button
-          id="number"
+          id="operator"
           class="py-4 px-4 rounded-xl bg-white border-b-2 border-l-2 border-zinc-500 hover:bg-slate-100"
         >
           &divide;
