--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
           .
         </button>
         <button
-          id="equals colTwo"
+          id="equals "
           class="col-span-2 py-4 px-4 rounded-xl bg-white border-b-2 border-l-2 border-zinc-500 hover:bg-slate-100"
         >
           &equals;
