--- a/index.html
+++ b/index.html
@@ -23,12 +23,14 @@
       >
         <button
           id="clear"
+          data-action="clear"
           class="rounded-lg bg-white border-b-2 border-l-2 border-zinc-500 hover:bg-slate-100"
         >
           C
         </button>
         <button
           id="delete"
+          data-action="delete"
           class="py-4 px-4 rounded-xl bg-white border-b-2 border-l-2 border-zinc-500 hover:bg-slate-100"
         >
           DEL
@@ -41,6 +43,7 @@
         </button>
         <button
           id="operator"
+          data-action="divide"
           class="py-4 px-4 rounded-xl bg-white border-b-2 border-l-2 border-zinc-500 hover:bg-slate-100"
         >
           &divide;
@@ -65,6 +68,7 @@
         </button>
         <button
           id="operator"
+          data-action="multiply"
           class="py-4 px-4 rounded-xl bg-white border-b-2 border-l-2 border-zinc-500 hover:bg-slate-100"
         >
           &times;
@@ -89,6 +93,7 @@
         </button>
         <button
           id="operator"
+          data-action="subtract"
           class="py-4 px-4 rounded-xl bg-white border-b-2 border-l-2 border-zinc-500 hover:bg-slate-100"
         >
           &minus;
@@ -113,6 +118,7 @@
         </button>
         <button
           id="operator"
+          data-action="add"
           class="py-4 px-4 rounded-xl bg-white border-b-2 border-l-2 border-zinc-500 hover:bg-slate-100"
         >
           &plus;
@@ -125,12 +131,14 @@
         </button>
         <button
           id="number"
+          data-action="decimal"
           class="py-4 px-4 rounded-xl bg-white border-b-2 border-l-2 border-zinc-500 hover:bg-slate-100"
         >
           .
         </button>
         <button
           id="equals"
+          data-action="calculate"
           class="col-span-2 py-4 px-4 rounded-xl bg-white border-b-2 border-l-2 border-zinc-500 hover:bg-slate-100"
         >
           &equals;
