--- a/index.html
+++ b/index.html
@@ -4,12 +4,56 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="src/js/app.js" defer></script>
     <link rel="stylesheet" href="dist/style.css" />
     <title>calculator</title>
   </head>
   <body class="bg-pink-50">
     <!-- calculator -->
-
-    <script src="src/js/app.js"></script>
+    <div
+      class="calculater mt-10 container mx-auto grid grid-cols-4 gap-1 max-w-sm border-8 bg-blue-200 rounded-lg text-xl"
+    >
+      <div id="output" class="col-span-4 p-2 border-4 text-black">
+        <!-- <div id="display-1" class="display border-5 bg-gray-400 py-2">0</div> -->
+        <input
+          type="text"
+          name="screen"
+          id="screen"
+          value="inputValue"
+          class="display border-5 bg-gray-400 py-2 px-2"
+        />
+      </div>
+      <button class="col-span-2 p-2 text-lg bg-red-300 rounded-xl" data-clear>
+        Ac
+      </button>
+      <button class="p-2 text-lg bg-red-300 rounded-xl" data-delete>Del</button>
+      <button class="p-2 text-lg bg-red-300 rounded-xl" data-operation>
+        &divide
+      </button>
+      <button class="p-2 text-lg bg-red-300 rounded-xl" data-number>1</button>
+      <button class="p-2 text-lg bg-red-300 rounded-xl" data-number>2</button>
+      <button class="p-2 text-lg bg-red-300 rounded-xl" data-number>3</button>
+      <button class="p-2 text-lg bg-red-300 rounded-xl" data-operation>
+        X
+      </button>
+      <button class="p-2 text-lg bg-red-300 rounded-xl" data-number>4</button>
+      <button class="p-2 text-lg bg-red-300 rounded-xl" data-number>5</button>
+      <button class="p-2 text-lg bg-red-300 rounded-xl" data-number>6</button>
+      <button class="p-2 text-lg bg-red-300 rounded-xl" data-operation>
+        +
+      </button>
+      <button class="p-2 text-lg bg-red-300 rounded-xl" data-number>7</button>
+      <button class="p-2 text-lg bg-red-300 rounded-xl" data-number>8</button>
+      <button class="p-2 text-lg bg-red-300 rounded-xl" data-number>9</button>
+      <button class="p-2 text-lg bg-red-300 rounded-xl" data-operation>
+        -
+      </button>
+      <button class="p-2 text-lg bg-red-300 rounded-xl" data-number>.</button>
+      <button class="p-2 text-lg bg-red-300" data-number>0</button>
+      <button class="col-span-2 p-2 text-lg bg-red-300 rounded-xl" data-equals>
+        =
+      </button>
+    </div>
+    <div></div>
   </body>
 </html>
