--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>calculator</title>
   </head>
   <body class="bg-pink-50 font-bold">
+    <div class="container text-center p-6 m-6 mx-auto">Project Calculator</div>
     <!-- calculator -->
     <div
       class="calculater mt-10 container mx-auto grid grid-cols-4 gap-1 max-w-sm border-8 bg-blue-200 rounded-lg text-xl"
@@ -18,7 +19,7 @@
         class="col-span-4 p-2 border-4 text-black text-center font-mono text-xl font-bold"
       >
         Calculator
-        <!-- <div id="display-1" class="display border-5 bg-gray-400 py-2">0</div> -->
+
         <input
           type="text"
           name="screen"
